将demo转到测试中;方便调试;